--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-hello
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <title>내 첫 웹사이트</title>
+</head>
+<body>
+
+    <h1>안녕하세요!</h1>
+    <p>이건 기본 HTML 페이지입니다.</p>
+
+  <div>
+  <label for="uid">아이디</label>
+    <input type="text" name="uid" id="uid">
+    <label for="pwd">암호</label>>
+    <input type="password" name="pwd" id="pwd">
+    <button type="submit">로그인</button>
+</div>
+
+</body>
+</html>
