--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div>
   <label for="uid">아이디</label>
     <input type="text" name="uid" id="uid">
-    <label for="pwd">암호</label>>
+    <label for="pwd">암호</label>
     <input type="password" name="pwd" id="pwd">
     <button type="submit">로그인</button>
 </div>
