--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <p>이건 기본 HTML 페이지입니다.</p>
 
   <div>
-  <label for="uid">아이디</label>
+  <form>
+      <label for="uid">아이디</label>
     <input type="text" name="uid" id="uid">
     <label for="pwd">암호</label>
     <input type="password" name="pwd" id="pwd">
     <button type="submit">로그인</button>
+      </form>
 </div>
 
 </body>
