--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 
   <div>
   <form>
-      <label for="uid">아이디</label>
+     <div>
+         <label for="uid">아이디</label>
     <input type="text" name="uid" id="uid">
-    <label for="pwd">암호</label>
-    <input type="password" name="pwd" id="pwd">
-    <button type="submit">로그인</button>
+       </div>  
+   <div></div> <label for="pwd">암호</label>
+  <input type="password" name="pwd" id="pwd">
+  </div>
+   <div> <button type="submit">로그인</button></div>
       </form>
 </div>
 
