--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>내 첫 웹사이트</title>
+    <sytle>
+        div{ border:1px solid black;}
+    </sytle>
 </head>
 <body>
 
     <h1>안녕하세요!</h1>
     <p>이건 기본 HTML 페이지입니다.</p>
 
+    
   <div>
   <form>
      <div>
