--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>내 첫 웹사이트</title>
-    <sytle>
-        div{ border:1px solid black;}
+    <style>
+    div{ 
+    border:1px solid black;
+        }
     </sytle>
 </head>
 <body>
