--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <title>내 첫 웹사이트</title>
     <style>
-    div{ 
-    border:1px solid black;
-        }
+    div{ border:1px solid black; }
     </sytle>
 </head>
 <body>
