--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>내 첫 웹사이트</title>
     <style>
-        div {
+        #form_container {
             border: 1px solid black;
            
         }
@@ -15,7 +15,7 @@
 <h1>안녕하세요!</h1>
 <p>이건 기본 HTML 페이지입니다.</p>
 
-<div>
+<div id="form_container">
     <form>
         <div>
             <label for="uid">아이디</label>
