--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>내 첫 웹사이트</title>
     <style>
         #form_container {
+            display:inline-block;
+            width:fit-content;
             border: 1px solid black;
            
         }
