--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             display:inline-block;
             width:fit-content;
             border: 1px solid black;
-           
+           padding:10px;
         }
     </style>
 </head>
