--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
             width:fit-content;
             border: 1px solid black;
            padding:15px;
-        }
+        } 
+        label{width:50px}
     </style>
 </head>
 <body>
