--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             border: 1px solid black;
            padding:15px;
         } 
-        label{width:50px}
+        label{width:50px;
+             }
     </style>
 </head>
 <body>
