--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             border: 1px solid black;
            padding:15px;
         } 
-        label{dispaly:inline-block; width:50px;
+        label{display:inline-block; width:50px;
              }
     </style>
 </head>
