--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
            padding:15px;
         } 
         label{display:inline-block; width:50px;
-             }
+             text-align:right;}
     </style>
 </head>
 <body>
