--- a/index.html
+++ b/index.html
@@ -4,14 +4,35 @@
     <meta charset="UTF-8">
     <title>내 첫 웹사이트</title>
     <style>
+        /* 로그인 폼 전체 박스 */
         #form_container {
-            display:inline-block;
-            width:fit-content;
+            display: inline-block;
             border: 1px solid black;
-           padding:15px;
-        } 
-        label{display:inline-block; width:50px;
-             text-align:right;}
+            padding: 20px;
+        }
+
+        /* 한 줄씩 정렬 */
+        #form_container div {
+            margin-bottom: 10px;
+        }
+
+        /* 라벨 정렬 */
+        label {
+            display: inline-block;
+            width: 50px;
+            text-align: right;
+            margin-right: 5px;
+        }
+
+        /* 로그인 버튼 가운데 */
+        #form_container div:last-child {
+            text-align: center;
+        }
+
+        button {
+            padding: 6px 20px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -38,3 +59,4 @@
 </div>
 
 </body>
+</html>
