--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                  <label for="pwd">암호</label> 
                  <input type="password" name="pwd" id="pwd"> 
              </div>
-             <div> 
+             <div class="btn_div"> 
                  <button type="submit">로그인</button>
              </div> 
          </form> 
