--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     </style>
     </head> 
     <body>
-     <div id="form_container"> 
+     <h1>안녕하세요!</h1> 
+        <p>이건 기본 HTML 페이지입니다.</p>
+        
+        <div id="form_container"> 
          <form> 
              <div>
                  <label for="uid">아이디</label> 
