--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         #form_container { display:inline-block; width:fit-content; border: 1px solid black; padding:15px;}
         label{display:inline-block; width:50px; text-align:right;}
         div.btn_div{margin-top:10px;}
+        .btn_div { text-align:center:}
     </style>
     </head> 
     <body>
